@@ -14,7 +14,7 @@ XMX=${XMX:-2g}
 
 docker container run --restart "$RESTART" --name "$CONTAINER" \
 	-e DOCKER_USER="$DOCKER_USER" \
-	-e JAVA_OPTS="-Xms$XMS -Xmx$XMX -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseParNewGC -XX:NewRatio=2 -XX:+AggressiveOpts" \
+	-e JAVA_OPTS="-Xms$XMS -Xmx$XMX -XX:SoftRefLRUPolicyMSPerMB=36000 -XX:+UseG1GC -XX:NewRatio=2 -XX:+AggressiveOpts" \
 	--network "$DOCKER_USER" \
 	"$@" \
 	-d "$IMAGE"
